# projects-fast-api

./: .gitignore  Dockerfile  README  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
app/crud/: project.py
app/models/: project.py
app/routers/: projects.py
app/schemas/: geometry.py  project.py
tests/: test_main.py  test_projects.py
