[tool.poetry]
name = "fast-api-project"
version = "0.1.0"
description = ""
authors = ["Jorge"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
geoalchemy2 = "^0.13.0"
python-dateutil = "^2.8.2"
shapely = "^2.0.0"
pytest = "^7.4.0"
httpx = "^0.24.0"
pydantic-settings = "^2.6.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
